2006/06/16	kaffeetisch

	* t/GtkNotebook.t, xs/GtkNotebook.xs: Use an API improvement in
	gtk+ 2.9.2.

	* map-2.10, t/GtkTreeView.t, xs/GtkTreeView.xs: Bind and test
	gtk_tree_view_set_rubber_banding,
	gtk_tree_view_get_rubber_banding, gtk_tree_view_get_grid_lines,
	gtk_tree_view_set_grid_lines, gtk_tree_view_get_enable_tree_lines,
	gtk_tree_view_set_enable_tree_lines.

2006/06/05	kaffeetisch

	* t/GtkButton.t, xs/GtkButton.xs: Wrap
	gtk_button_set_image_position and gtk_button_get_image_position.

	* t/GtkMessageDialog.t, xs/GtkMessageDialog.xs: Wrap
	gtk_message_dialog_set_image.

	* t/GtkStatusIcon.t, xs/GtkStatusIcon.xs: Wrap
	gtk_status_icon_get_geometry.

2006/05/25	muppetman

	* t/GtkWidget.t, xs/GtkWidget.xs: Allow undef for the modify_foo
	methods.  #342891

2006/05/20	kaffeetisch

	Another successful gtk2-perl tag team coup:

	* t/GtkHButtonBox.t, t/GtkVButtonBox.t:
	Test [gs]et_layout_default, [gs]et_spacing_default.

	* xs/GdkEvent.xs: Remove an unneeded call to gperl_set_isa.

	* t/GtkAction.t, xs/GtkAction.xs: Bind and test
	gtk_widget_get_action.

	* MANIFEST, maps-2.10, xs_files-2.10, t/GtkCellRendererSpin.t,
	xs/GtkCellRendererSpin.xs: Add support for GtkCellRendererSpin.

	* t/GtkClipboard.t, xs/GtkClipboard.xs: Bind and test
	gtk_clipboard_request_rich_text, gtk_clipboard_wait_for_rich_text,
	gtk_clipboard_wait_is_rich_text_available.

	* t/GtkComboBox.t, xs/GtkComboBox.xs: Bind and test
	gtk_combo_box_set_title, gtk_combo_box_get_title.

	* t/GtkDnd.t, xs/GtkDnd.xs: Bind and test
	gtk_drag_dest_set_track_motion, gtk_drag_dest_get_track_motion.

	* t/GtkEntry.t, xs/GtkEntry.xs: Bind and test
	gtk_entry_set_inner_border, gtk_entry_get_inner_border and the new
	boxed wrapper for GtkBorder they made necessary.

	* t/GtkFileChooserButton.t, xs/GtkFileChooserButton.xs: Bind and
	test gtk_file_chooser_button_set_focus_on_click,
	gtk_file_chooser_button_get_focus_on_click.

	* t/GtkNotebook.t, xs/GtkNotebook.xs: Bind and test